2012-12-03 AlexanderR <alexanderr at gmx dot com>

	* 20120312-1 :
	upstream update. added ChangeLog.

	* jacklistener.rc :
	Removed, included by upstream.

2012-11-03 AlexanderR <alexanderr at gmx dot com>

        * 20120311-1 :
	initial release.