@@ -2,11 +2,11 @@
 
 pkgname=archcfg-mod
 pkgver=0.5.1
-pkgrel=1
-pkgdesc="Arch Linux system configuration tool. All in one place and easily modified."
+pkgrel=2
+pkgdesc="Arch Linux system configuration script."
 url="http://ompldr.org/vZDA2MA"
 depends=()
-optdepends=('mc: for file browsing' 'pcurses: for  package management')
+optdepends=('mc: for file browsing')
 source=("http://dl.dropbox.com/u/15144878/archcfg-mod-$pkgver.sh")
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -15,5 +15,5 @@ md5sums=('3280b7cfb491de9d1acd9d734d8acf60')
 build() {
 	mkdir -p $pkgdir/etc/archcfg/
 	mkdir -p $pkgdir/usr/bin/
-	install -m744 archcfg-mod-$pkgver.sh $pkgdir/usr/bin/archcfg
+	install -m755 archcfg-mod-$pkgver.sh $pkgdir/usr/bin/archcfg
 }
