@@ -1,5 +1,5 @@
-# Maintainer: Patrick Palka <patrick@parcs.ath.cx>
-# Development: http://closure.ath.cx/aur-dev
+# Contributor: Patrick Palka <patrick@parcs.ath.cx>
+# Maintainer: Thomas Zervogiannis <tzervo@gmail.com>
 
 _gitname="cliweather"
 pkgname=cliweather-git
@@ -26,5 +26,5 @@ package() {
         git clone "$_gitroot" && cd "$_gitname"
     fi
 
-    install -vDm755 "weather" "$pkgdir/usr/bin/weather"
+    install -vDm755 "cliweather" "$pkgdir/usr/bin/weather"
 }
