@@ -6,13 +6,13 @@
 
 pkgname=freecad
 pkgver=0.12.5284
-pkgrel=3
+pkgrel=4
 pkgdesc='A general purpose 3D CAD modeler'
 arch=('i686' 'x86_64')
 url='http://sourceforge.net/apps/mediawiki/free-cad/'
 license=('GPL')
-depends=('boost-libs=1.48.0' 'curl' 'opencascade>=6.5.2' 'pivy-hg' 'python2-pyqt' 'xerces-c' 'libspnav' 'shared-mime-info' 'hicolor-icon-theme')
-makedepends=('boost=1.48.0' 'eigen3' 'gcc-fortran' 'swig1' 'xerces-c' 'desktop-file-utils')
+depends=('boost-libs=1.49.0' 'curl' 'opencascade>=6.5.2' 'pivy-hg' 'python2-pyqt' 'xerces-c' 'libspnav' 'shared-mime-info' 'hicolor-icon-theme')
+makedepends=('boost=1.49.0' 'eigen3' 'gcc-fortran' 'swig1' 'xerces-c' 'desktop-file-utils')
 options=(!libtool !makeflags)
 install=freecad.install
 source=("http://downloads.sourceforge.net/sourceforge/free-cad/freecad-${pkgver}.tar.gz" "${pkgname}.desktop" "${pkgname}.xml" "occ652.patch")
