@@ -1,7 +1,7 @@
 # Contributor: Hugo Osvaldo Barrera <hugo at osvaldobarrera dot com dot ar>
 
 pkgname=hybrid-encoder
-pkgver=120221
+pkgver=120306
 pkgrel=1
 pkgdesc="A very complete gui for video encoding"
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ if test "$CARCH" == x86_64; then
   source=(http://www.selur.de/sites/default/files/hybrid_downloads/Hybrid_${pkgver}_64bit_binary.zip
           hybrid.desktop
           Hybrid.png)
-  md5sums=('47945889c3d912b8f078a0648c7466a6'
+  md5sums=('a564f9f93be4184c11927d3949d332fe'
            'ef192eacf5ae36753de84561a3a5248a'
            '798dd936a3bc9bcd3b131d5dd6db96e6')
 
@@ -23,7 +23,7 @@ if test "$CARCH" == i686; then
   source=(http://www.selur.de/sites/default/files/hybrid_downloads/Hybrid_${pkgver}_binary.zip
           hybrid.desktop
           Hybrid.png)
-  md5sums=('d64f5008b9e6181d606238fb13da2158'
+  md5sums=('33afe54492ba244651d7a67bb3306fb2'
            'ef192eacf5ae36753de84561a3a5248a'
            '798dd936a3bc9bcd3b131d5dd6db96e6')
 fi
