@@ -2,17 +2,17 @@
 # Contributor: Maxim A. Mikityanskiy <maxtram95@gmail.com>
 _gitname=jacklistener
 _gitroot="git://github.com/gentoo-root/${_gitname}.git"
-pkgname=$_gitname-git
+pkgname=jacklistener-git
 pkgver=20120312
-pkgrel=1
+pkgrel=2
 pkgdesc="Headphones Jack Listener Daemon"
 arch=('i686' 'x86_64')
-url="https://github.com/gentoo-root/$_gitname"
+url="https://github.com/gentoo-root/jacklistener"
 license=('GPL3')
 depends=('dbus')
 makedepends=('git' 'linux-headers')
-provides=("$_gitname")
-conflicts=("$_gitname")
+provides=("jacklistener")
+conflicts=("jacklistener")
 options=(!emptydirs)
 changelog=ChangeLog
 
@@ -34,6 +34,12 @@ build() {
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
 
+  libtoolize
+  aclocal -I m4
+  autoheader
+  automake --add-missing
+  autoconf
+  ./configure --prefix=/usr --sysconfdir=/etc --enable-systemd --enable-arch
   make
 }
 
@@ -42,13 +48,5 @@ package() {
 
   make DESTDIR="$pkgdir" install
 
-  install -D -m755 init.d/jacklistener-arch "$pkgdir/etc/rc.d/${_gitname}d"
   install -D -m644 README "$pkgdir/usr/share/doc/$pkgname/README"
-
-  cd "$pkgdir/"
-
-  rm etc/init.d/jacklistener usr/sbin/jacklistenerd
-
-  mkdir -p sbin
-  mv usr/lib/jacklistener/jacklistenerd sbin/jacklistenerd
 }
