@@ -1,7 +1,7 @@
 # Maintainer: Xiao-Long Chen <chenxiaolong@cxl.epac.to>
 
 pkgname=muffin-git
-pkgver=20120126
+pkgver=20120311
 pkgrel=1
 pkgdesc="A window manager for GNOME"
 arch=('i686' 'x86_64')
