@@ -3,7 +3,7 @@
 
 pkgname=mundus
 pkgdesc="Clean and backup your /home and /etc folder from old configuration files once created by uninstalled software."
-pkgver=1.0.0
+pkgver=1.0.1
 pkgrel=1
 arch=('any')
 url="https://launchpad.net/mundus"
@@ -12,7 +12,7 @@ conflicts=('mundus-bzr')
 depends=('gambas3-gb-image>=2.90.0' 'gambas3-gb-qt4>=2.90.0' 'gambas3-gb-form>=2.90.0' 'gambas3-gb-form-stock>=2.90.0' 'gambas3-gb-desktop>=2.90.0' 'gambas3-gb-settings>=2.90.0' 'gambas3-gb-net>=2.90.0' 'gambas3-gb-net-curl>=2.90.0' 'gambas3-gb-web>=2.90.0')
 makedepends=('gambas3-devel')
 source=(https://launchpad.net/mundus/trunk/$pkgver/+download/$pkgname-$pkgver.tar.gz)
-md5sums=('4c3b5c186897bb2a3d61b912fe156570')
+md5sums=('5c8e2d3977ba9ad09a693fcf720d017d')
 
 build() {
   cd ${srcdir}/${pkgname}
