@@ -3,7 +3,7 @@
 _name=expand
 pkgname=pidgin-$_name
 pkgver=0.6.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A pidgin plugin to replace all shortened links with their full equivalents."
 arch=(i686 x86_64)
 url="https://code.google.com/p/expand/"
@@ -22,6 +22,9 @@ build() {
   for _f in Makefile.in.in POTFILES.in es.po; do
     wget https://expand.googlecode.com/hg-history/0.6.0/po/$_f -O po/$_f
   done;
+
+  # add open ur1.ca service
+  sed -i '/tl.gd/p;s/tl.gd/ur1.ca/' expand.c
 
   ./configure --prefix=/usr
   make
