@@ -1,60 +1,61 @@
 # Maintainer:	Bartosz Chmura <chmurli@gmail.com>
-# Contributor:	alfplayer
+# Contributor: Alessio Sergi <asergi at archlinux dot us>
+# Contributor: alfplayer
 
 pkgname=retext
 pkgver=3.0.0
-pkgrel=1
-_icons_rev=3
-pkgdesc="Text editor for Markdown and reStructuredText"
+pkgrel=2
+pkgdesc="A simple editor for Markdown and ReStructuredText markup languages"
 arch=('any')
-url="http://sourceforge.net/p/retext/"
+url="http://retext.sourceforge.net/"
 license=('GPL3')
-depends=('python2'
-	 'python2-qt'
-	 'python2-markdown'
-	 'qt>=4'
-	 'python-docutils')
-optdepends=('python-gdata: needed if you want to use Google Docs export')
-source=("http://sourceforge.net/projects/retext/files/ReText-${pkgver%.*}/ReText_${pkgver}.tar.gz"
-	    "http://sourceforge.net/projects/retext/files/Icons/ReTextIcons_r${_icons_rev}.tar.gz"
-	    'retext.desktop')
-options=(!strip docs)
-md5sums=('713f32879459319bc116375358741301'
-         'bf54cc33ea1eab8bdd7d24cb46448a0d'
-         '82186876da0a52991d3f81324a52401d')
-
-#build () {
-	# Use Python 2
-	#sed -i '1s/python/python2/' retext.py wpgen/wpgen.py
-#}
+depends=('python2-docutils' 'python2-markdown' 'python2-qt' 'shared-mime-info')
+makedepends=('imagemagick')
+optdepends=('python2-pyenchant: for spell checking support'
+            'python-gdata: for google docs access')
+source=("http://sourceforge.net/projects/$pkgname/files/ReText-${pkgver%.*}/ReText_${pkgver}.tar.gz"
+        "$pkgname.desktop" "x-retext-markdown.xml" "x-retext-rst.xml")
+install="$pkgname".install
+sha256sums=('c9fe397f0ee61f2e3c34c59dd0ae88cd8a489cbbc1f80bd77361b7d6ec25b5a8'
+            '7782f4402fe62e48335c1bdd5c1fd5cbb48c408fabaf4f018a074f8b3eef838e'
+            'b51611479d3224eec2b58264ed91ace3eccb502b7b806dae3e7a3ab4aab8c4b8'
+            '6fef80cccb14813d9cc74810c397a6cd7831d1ca243536759a47c6e8b6cc977a')
 
 package () {
+  cd "$srcdir"
 
-	share_dir=${pkgdir}/usr/share
+	# python2 fix
+	sed -i '1s/python/&2/' $pkgname.py wpgen/wpgen.py
 
-	retext_dir=${share_dir}/${pkgname}
+  # install bin scripts
+  install -d -m 755 $pkgdir/usr/bin
+  install -m 755 $pkgname.py $pkgdir/usr/bin/$pkgname
+  install -m 755 wpgen/wpgen.py $pkgdir/usr/bin/wpgen
 
-	# Create directories
-	install -d -m 755 ${pkgdir}/usr/bin ${share_dir}/{wpgen,icons,mime/packages,applications,${pkgname}/{locale,doc}}
+  # create /usr/share/* dirs
+  SHAREDIR="$pkgdir/usr/share"
+  install -d -m 755 $SHAREDIR/{applications,mime/packages,$pkgname/locale,wpgen}
 
-	# Install scripts retext and wpgen
-	install -m 755 ${pkgname}.py ${pkgdir}/usr/bin/retext
-	install -m 755 wpgen/wpgen.py ${pkgdir}/usr/bin/wpgen
+  # install wpgen data
+  install -m 644 wpgen/templates/* $SHAREDIR/wpgen/
 
-	install -m 644 README ${retext_dir}/doc/
+  # install locales
+  install -m 644 locale/*.qm $SHAREDIR/$pkgname/locale/
 
-	# Install translation files
-	install -m 644 locale/* ${retext_dir}/locale/
+  # install icons
+  ICONSDIR="$SHAREDIR/icons/hicolor"
+	for size in 16 22 24 32 48 128; do
+    install -d -m 755 $ICONSDIR/${size}x${size}/apps
+    convert -resize $size icons/$pkgname.png $ICONSDIR/${size}x${size}/apps/$pkgname.png
+  done
+  install -d -m 755 $ICONSDIR/scalable/apps
+  install -m 644 icons/$pkgname.svg $ICONSDIR/scalable/apps/$pkgname.svg
 
-	# Install wpgen data
-	install -m 644 wpgen/templates/* ${share_dir}/wpgen/
+  # install mime files
+  install -m 644 x-retext-{markdown,rst}.xml $SHAREDIR/mime/packages/
 
-	# Install icon
-	install -m 644 icons/* ${share_dir}/icons/
-	install -m 644 *.png ${share_dir}/icons/
-
-	# Install .desktop file
-	install -m 644 retext.desktop ${share_dir}/applications/
-
+  # install desktop file
+  install -m 644 $pkgname.desktop $SHAREDIR/applications/$pkgname.desktop
 }
 
+# vim:set ts=2 sw=2 et:
