@@ -1,8 +1,9 @@
 [Desktop Entry]
-Type=Application
 Name=ReText
-GenericName=Simple text editor for Markdown syntax
-Icon=/usr/share/icons/retext.png
-Exec=/usr/bin/retext
-Categories=Office;
+Comment=Simple text editor for Markdown and ReStructuredText
+Exec=retext %F
+Icon=retext
 Terminal=false
+Type=Application
+Categories=Office;
+MimeType=text/x-retext-markdown;text/x-retext-rst;
