@@ -1,0 +1,15 @@
+post_install() {
+  xdg-icon-resource forceupdate --theme hicolor &>/dev/null
+  update-desktop-database -q
+  update-mime-database usr/share/mime &>/dev/null
+}
+
+post_upgrade() {
+  post_install "$1"
+}
+
+post_remove() {
+  post_install "$1"
+}
+
+# vim:set ts=2 sw=2 et:
