@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
+	<mime-type type="text/x-retext-markdown">
+		<sub-class-of type="text/plain"/>
+		<comment>Markdown document</comment>
+		<glob pattern="*.md"/>
+		<glob pattern="*.mkd"/>
+		<glob pattern="*.mkdn"/>
+		<glob pattern="*.mdml"/>
+		<glob pattern="*.mdown"/>
+		<glob pattern="*.markdown"/>
+		<glob pattern="*.re"/>
+	</mime-type>
+</mime-info>
