@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
+	<mime-type type="text/x-retext-rst">
+		<sub-class-of type="text/plain"/>
+		<comment>reStructuredText document</comment>
+		<glob pattern="*.rst"/>
+		<glob pattern="*.rest"/>
+	</mime-type>
+</mime-info>
