@@ -3,7 +3,7 @@
 # Contributor: Shinlun Hsieh <yngwiexx@yahoo.com.tw>
 
 pkgname=stella
-pkgver=3.5
+pkgver=3.5.5
 pkgrel=1
 pkgdesc='A multi-platform Atari 2600 VCS emulator'
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ url='http://stella.sourceforge.net/'
 license=('GPL')
 depends=('gcc-libs' 'sdl' 'libpng')
 source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}-src.tar.gz")
-md5sums=('d184be96d7c9ea2dd72fb1c058d25936')
+md5sums=('7bf7a0fba9e56acc920ff0acfd71cc74')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
