@@ -18,13 +18,13 @@ _gitbranch="master"
 ##############################################################
 
 pkgname=tomahawk-git
-pkgver=20120117
+pkgver=20120311
 pkgrel=1
 pkgdesc="A Music Player App written in C++/Qt - development version"
 arch=('i686' 'x86_64')
 url="http://tomahawk-player.org/"
 license=('GPL3')
-depends=('phonon' 'taglib' 'boost' 'clucene' 'libechonest' 'jreen' 'qtweetlib' 'quazip' 'attica' 'qtwebkit')
+depends=('phonon' 'taglib' 'boost' 'clucene' 'libechonest' 'jreen-git' 'qtweetlib' 'quazip' 'attica' 'qtwebkit')
 makedepends=('git' 'cmake')
 optdepends=('tomahawk-spotify-git: spotify resolver')
 provides=('tomahawk')
