@@ -1,5 +1,10 @@
 2012-12-03 AlexanderR <alexanderr at gmx dot com>
 
+        * 20120312-2 :
+        upstream migrated to autoconf, small path changes.
+
+2012-12-03 AlexanderR <alexanderr at gmx dot com>
+
 	* 20120312-1 :
 	upstream update. added ChangeLog.
 
